fix: Ensure pre tag can overflow to render long names and descs
For overflow to work on the pre tag, we need a min-width of 0 on
the parent fieldsets.

--- a/inspector/web/components/app-sidebar.css
+++ b/inspector/web/components/app-sidebar.css
@@ -25,6 +25,7 @@ app-sidebar fieldset {
   border: none;
   padding: 0;
   margin: 0;
+  min-width: 0;
 }
 
 app-sidebar .status-message {
@@ -53,6 +54,7 @@ app-sidebar select {
   font-size: 12px;
   border-radius: 4px;
   border: 1px solid var(--color-border);
+  overflow: auto;
 }
 
 app-sidebar textarea {
